Wed Sep 24 22:48:32 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - The tree is now parsed and displayed as a tree with contacts.

Wed Sep 24 20:55:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* make.sh:
	  - Rebuild Makefile every time make.sh is ran.

Wed Sep 24 20:45:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimDialogs.cpp:
	  - API sync with libgaim 0.69.

Thu Sep 11 08:28:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Adding the initial framework for the preferencs dialog.

Thu Aug 28 23:28:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added support for registering accounts on protocol plugins that
	    support it (such as Jabber).

Thu Aug 28 22:39:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* README:
	* gaim.pro:
	* mkstuff.conf:
	  - Bumped the version up to 0.3cvs.

Thu Aug 28 22:27:53 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Synced with libgaim 0.68cvs.

Fri Aug 15 16:43:57 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* mkstuff.conf:
	  - Releasing 0.2.

Fri Aug 15 16:26:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Offline accounts in the accounts window are now greyed instead
	    of dimmed.

Fri Aug 15 15:03:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	  - Added protocol icon caching.

Fri Aug 15 14:20:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
